Changelog
=========


2.0.0 (unreleased)
------------------

- Require ftw.theming 1.10.2. [Kevin Bieri]

- Introduce general CSS-selectors for fixes [Kevin Bieri]


1.0.0 (2017-03-29)
------------------

- Introduce iframe fixes.

  - webkit iframe resize bug
  - ie iframe pointer events propagation

[Kevin Bieri]

- Initial implementation.