@@ -7,15 +7,10 @@
   IE10 and older MS browsers don't know pointer-events, so this selector won't work for them.
 */
 
-@include ie-only(".fix-iframe-ie-hover") {
+@mixin fix-iframe-cursor() {
   cursor: not-allowed;
 }
-@include ie-only(".fix-iframe-ie-hover") {
-  pointer-events: none;
-}
-@include ie-only(".fix-iframe-ie-hover") {
-  cursor: not-allowed;
-}
-@include ie-only(".fix-iframe-ie-hover") {
+
+@mixin fix-iframe-hover() {
   pointer-events: none;
 }
